--- a/src/App.css
+++ b/src/App.css
@@ -31,8 +31,8 @@
   display: flex;
   flex-direction: row wrap;
   justify-content: center;
-  align-items: center;
-  height: 3vw;
+/*   align-content: center;
+   */  height: 3vw;
   width: 3vw;
   border: 1px solid grey;
   background-color: #cfcfcf;
@@ -40,7 +40,14 @@
   font-size: 2vw;
   padding: 0.15vw;
   text-align: center;
-}
+  }
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+     -webkit-appearance: none;
+     -moz-appearance: none;
+     appearance: none;
+     margin: 0;
+ }
 input:disabled {
   color: red;
 }
